[package]
name = "payment-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.150" }
chrono = { version = "0.4.45", features = ["serde"] } 
uuid = { version = "1.23.4", features = ["v7", "serde"]}
postcard = "1.1.3"
tokio = { version = "1", features = ["full"] }